Fixed error handling message Fixed Searchbar styling and z-index

--- a/client/src/css/Search.css
+++ b/client/src/css/Search.css
@@ -1,8 +1,8 @@
 .search-wrapper {
     position: relative;
-    display: grid;
-    grid-auto-flow: column;
-    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    z-index: 0;
     width: 60dvw;
     left: 50%;
     transform: translateX(-50%);
@@ -13,23 +13,24 @@
 }
 
 .search-form {
-    width: 130%;
+    position: relative;
+    width: 90%;
     padding: 25px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+    gap: 50px;
 }
 
 .search-form input {
     padding: 15px;
     height: 15px;
-    width: 80%;
+    width: 100%;
     outline: none;
     border: none;
     color: #fff;
     transition: 300ms ease;
-    margin-right: 120px;
     font-size: 1.2rem;
 }
 
@@ -43,7 +44,6 @@
 }
 
 .buttons-wrapper {
-    margin-left: 35px;
     position: relative;
     display: grid;
     grid-auto-flow: column;
@@ -78,26 +78,25 @@
     box-shadow: none;
 }
 
+.dropdown-wrapper {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
 .dropdown-menu {
     display: none;
-    height: 100%;
-    margin-top: 0;
-    right: 0;
-    transition: 300ms ease;
-    animation: dropdown-fade-in 300ms ease reverse;
 }
 
 .dropdown-menu.shown {
-    margin-left: 0;
-    left: 100%;
+    left: 0;
+    top: 0;
+    margin: 0;
     position: absolute;
-    top: 0%;
     display: grid;
     grid-auto-flow: row;
     background-color: var(--gray);
-    opacity: 0;
     animation: dropdown-fade-in 300ms ease forwards;
-
 }
 
 .list-item {
